Delay, input locking